force-app/main/default/objects/Permanency_Plan__c/Permanency_Plan__c.object-meta.xml
<CustomObject>
    <label>Permanency Plan</label>
    <nameField>
        <label>Permanency Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Permanency Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>