force-app/main/default/objects/Permanency_Plan__c/fields/A_voluntary_placement_agreement__c.field-meta.xml
<CustomField>
    <fullName>A_voluntary_placement_agreement__c</fullName>
    <inlineHelpText>A voluntary placement agreement ?</inlineHelpText>
    <label>A voluntary placement agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>