force-app/main/default/objects/Permanency_Plan__c/fields/Address_Provider__c.field-meta.xml
<CustomField>
    <fullName>Address_Provider__c</fullName>
    <formula>&apos;True&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>