force-app/main/default/objects/Permanency_Plan__c/fields/Adoption_Case__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adoption Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Permanency Plans</relationshipLabel>
    <relationshipName>Permanency_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>