force-app/main/default/objects/Permanency_Plan__c/fields/Adoption_has_been_finalized__c.field-meta.xml
<CustomField>
    <fullName>Adoption_has_been_finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Adoption has been finalized</inlineHelpText>
    <label>Adoption has been finalized</label>
    <type>Checkbox</type>
</CustomField>