force-app/main/default/objects/Permanency_Plan__c/fields/Adoption_Plan_Begin_Date__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Plan_Begin_Date__c</fullName>
    <label>Adoption Plan Begin Date</label>
    <type>Date</type>
</CustomField>