force-app/main/default/objects/Permanency_Plan__c/fields/Adoption_Planning__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Planning__c</fullName>
    <label>Adoption Planning</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>TPR Recommendation</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Termination of Parental Rights</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Adoption Planning</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Adoption Subsidy</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Break the Link</label>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>