force-app/main/default/objects/Permanency_Plan__c/fields/Adoption_Planning_Stage__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Planning_Stage__c</fullName>
    <label>Adoption Planning Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADOPTION EFFORTS</fullName>
                <default>true</default>
                <label>ADOPTION EFFORTS</label>
            </value>
            <value>
                <fullName>EMOTIONAL TILES</fullName>
            </value>
            <value>
                <fullName>NARRATIVE</fullName>
            </value>
            <value>
                <fullName>APPLICABLE CHILD ASSESSMENT</fullName>
            </value>
            <value>
                <fullName>DISCLOSURE CHECKLIST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>