force-app/main/default/objects/Permanency_Plan__c/fields/Adoptive_Parent_1__c.field-meta.xml
<CustomField>
    <fullName>Adoptive_Parent_1__c</fullName>
    <label>Adoptive Parent 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>