force-app/main/default/objects/Permanency_Plan__c/fields/Adoptive_Parent_1_Signature__c.field-meta.xml
<CustomField>
    <fullName>Adoptive_Parent_1_Signature__c</fullName>
    <inlineHelpText>Adoptive Parent(1) Signature</inlineHelpText>
    <label>Adoptive Parent(1) Signature</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>