force-app/main/default/objects/Permanency_Plan__c/fields/Adoptive_Parent_1_signature_date__c.field-meta.xml
<CustomField>
    <fullName>Adoptive_Parent_1_signature_date__c</fullName>
    <inlineHelpText>Adoptive Parent(1) signature date</inlineHelpText>
    <label>Adoptive Parent(1) signature date</label>
    <type>DateTime</type>
</CustomField>