force-app/main/default/objects/Permanency_Plan__c/fields/Adoptive_Parent_2_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>Adoptive_Parent_2_Signature_Date__c</fullName>
    <inlineHelpText>Adoptive Parent(2) Signature Date</inlineHelpText>
    <label>Adoptive Parent(2) Signature Date</label>
    <type>DateTime</type>
</CustomField>