force-app/main/default/objects/Permanency_Plan__c/fields/Adoptive_Placement_Agreement_signed__c.field-meta.xml
<CustomField>
    <fullName>Adoptive_Placement_Agreement_signed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Adoptive Placement Agreement has been signed</inlineHelpText>
    <label>Adoptive Placement Agreement signed</label>
    <type>Checkbox</type>
</CustomField>