force-app/main/default/objects/Permanency_Plan__c/fields/adoptive_search_and_reunion_service__c.field-meta.xml
<CustomField>
    <fullName>adoptive_search_and_reunion_service__c</fullName>
    <inlineHelpText>Discussed post adoptive search and reunion service with the family</inlineHelpText>
    <label>adoptive search and reunion service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>