force-app/main/default/objects/Permanency_Plan__c/fields/Agreement_Caregiver_completed__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Caregiver_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Caregiver completed a comprehensive home Study</inlineHelpText>
    <label>Caregiver completed a comprehensive home</label>
    <type>Checkbox</type>
</CustomField>