force-app/main/default/objects/Permanency_Plan__c/fields/Agreement_Guardian_Two_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Guardian_Two_Date__c</fullName>
    <label>Guardian Two Date</label>
    <type>Date</type>
</CustomField>