force-app/main/default/objects/Permanency_Plan__c/fields/Agreement_Is_Child_receiving_TCA_Yes_No__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Is_Child_receiving_TCA_Yes_No__c</fullName>
    <label>Is Child receiving TCA? (Yes/No)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>