force-app/main/default/objects/Permanency_Plan__c/fields/Agreement_LDSS_Director_Designee__c.field-meta.xml
<CustomField>
    <fullName>Agreement_LDSS_Director_Designee__c</fullName>
    <label>LDSS Director/Designee</label>
    <type>Date</type>
</CustomField>