force-app/main/default/objects/Permanency_Plan__c/fields/Agreement_Negotiated_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Negotiated_Date__c</fullName>
    <label>Negotiated Date</label>
    <type>Date</type>
</CustomField>