force-app/main/default/objects/Permanency_Plan__c/fields/Agreement_Notes__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Notes__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>