force-app/main/default/objects/Permanency_Plan__c/fields/Agreement_Rate_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Rate_End_Date__c</fullName>
    <label>Rate End Date</label>
    <type>Date</type>
</CustomField>