force-app/main/default/objects/Permanency_Plan__c/fields/Agreement_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Rate_Type__c</fullName>
    <label>Rate Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>