force-app/main/default/objects/Permanency_Plan__c/fields/Agreement_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>