force-app/main/default/objects/Permanency_Plan__c/fields/Agrrement_Guardian_One_Date__c.field-meta.xml
<CustomField>
    <fullName>Agrrement_Guardian_One_Date__c</fullName>
    <label>Guardian One Date</label>
    <type>Date</type>
</CustomField>