force-app/main/default/objects/Permanency_Plan__c/fields/Agrrement_Rate_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Agrrement_Rate_Approval_Date__c</fullName>
    <label>Rate Approval Date</label>
    <type>Date</type>
</CustomField>