force-app/main/default/objects/Permanency_Plan__c/fields/alcohol_drug_addiction_child_s_parent__c.field-meta.xml
<CustomField>
    <fullName>alcohol_drug_addiction_child_s_parent__c</fullName>
    <inlineHelpText>Provided written information to the family pertaining to any known alcohol, drug addiction the child&apos;s birth parent may have had</inlineHelpText>
    <label>alcohol, drug addiction child&apos;s parent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>