force-app/main/default/objects/Permanency_Plan__c/fields/All_medical_disability_requirements_SSI__c.field-meta.xml
<CustomField>
    <fullName>All_medical_disability_requirements_SSI__c</fullName>
    <inlineHelpText>All medical disability requirements for SSI</inlineHelpText>
    <label>All medical disability requirements SSI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>