force-app/main/default/objects/Permanency_Plan__c/fields/All_Placements_and_Removal_have_been_End__c.field-meta.xml
<CustomField>
    <fullName>All_Placements_and_Removal_have_been_End__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>All Placements and Removal have been End Dated</inlineHelpText>
    <label>All Placements and Removal have been End</label>
    <type>Checkbox</type>
</CustomField>