force-app/main/default/objects/Permanency_Plan__c/fields/An_involuntary_removal_in_accordance__c.field-meta.xml
<CustomField>
    <fullName>An_involuntary_removal_in_accordance__c</fullName>
    <inlineHelpText>An involuntary removal in accordance with the judicial determination that is contrary to the child&apos;s  welfare to remain in the home?</inlineHelpText>
    <label>An involuntary removal in accordance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>