force-app/main/default/objects/Permanency_Plan__c/fields/Annual_CJAMS_PID__c.field-meta.xml
<CustomField>
    <fullName>Annual_CJAMS_PID__c</fullName>
    <label>CJAMS PID #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>