force-app/main/default/objects/Permanency_Plan__c/fields/Annual_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Annual_Client_Name__c</fullName>
    <label>Client Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>