force-app/main/default/objects/Permanency_Plan__c/fields/Annual_D_O_B__c.field-meta.xml
<CustomField>
    <fullName>Annual_D_O_B__c</fullName>
    <label>D.O.B</label>
    <type>Date</type>
</CustomField>