force-app/main/default/objects/Permanency_Plan__c/fields/Annual_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Annual_Review_Date__c</fullName>
    <label>Review Date</label>
    <type>Date</type>
</CustomField>