force-app/main/default/objects/Permanency_Plan__c/fields/Application_Receipt_of_Social_Security__c.field-meta.xml
<CustomField>
    <fullName>Application_Receipt_of_Social_Security__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Relative Caregiver(s) agrees to notify the local department of the application and receipt of social security and child support benefits on behalf of the child</inlineHelpText>
    <label>Application&amp;Receipt of Social Security</label>
    <type>Checkbox</type>
</CustomField>