force-app/main/default/objects/Permanency_Plan__c/fields/Application_Reunification_has_been_ruled__c.field-meta.xml
<CustomField>
    <fullName>Application_Reunification_has_been_ruled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Reunification and Adoption have been discussed and ruled out as permanency Plans</inlineHelpText>
    <label>Reunification has been ruled</label>
    <type>Checkbox</type>
</CustomField>