force-app/main/default/objects/Permanency_Plan__c/fields/Application_Understands__c.field-meta.xml
<CustomField>
    <fullName>Application_Understands__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Relative Caregiver(s) Understands that they are a relative for the purposes of custody and guardianship as defined by COMAR 07.02.02(11)(a)(b)(i-iv)</inlineHelpText>
    <label>Purposes of Custody and Guardianship</label>
    <type>Checkbox</type>
</CustomField>