force-app/main/default/objects/Permanency_Plan__c/fields/Approval_status_for_break_the_link__c.field-meta.xml
<CustomField>
    <fullName>Approval_status_for_break_the_link__c</fullName>
    <inlineHelpText>Break the link Approval Status</inlineHelpText>
    <label>Approval status for break the link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>