force-app/main/default/objects/Permanency_Plan__c/fields/approved_as_a_resource_home_for_6_Month__c.field-meta.xml
<CustomField>
    <fullName>approved_as_a_resource_home_for_6_Month__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Relative Caregiver(s) Understandard that they must be fully approved as a resource home for six consecutive months during which the child has resided with the relative caregiver without interruption.</inlineHelpText>
    <label>approved as a resource home for 6 Month</label>
    <type>Checkbox</type>
</CustomField>