force-app/main/default/objects/Permanency_Plan__c/fields/Assessment_Period_Explanation_Required__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Period_Explanation_Required__c</fullName>
    <label>Explanation Required</label>
    <type>TextArea</type>
</CustomField>