force-app/main/default/objects/Permanency_Plan__c/fields/Authorization_for_Release_of_Health__c.field-meta.xml
<CustomField>
    <fullName>Authorization_for_Release_of_Health__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Relative Caregiver(s)  Completed an Authorization for Release of Health (Medical and Mental Health) Information.</inlineHelpText>
    <label>Authorization for Release of Health</label>
    <type>Checkbox</type>
</CustomField>