force-app/main/default/objects/Permanency_Plan__c/fields/Caregiver_completed_a_comprehensive__c.field-meta.xml
<CustomField>
    <fullName>Caregiver_completed_a_comprehensive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Caregiver completed or is in the Process of completing a comprehensive home study</inlineHelpText>
    <label>Caregiver completed a comprehensive</label>
    <type>Checkbox</type>
</CustomField>