force-app/main/default/objects/Permanency_Plan__c/fields/Caregiver_Explanation_Required__c.field-meta.xml
<CustomField>
    <fullName>Caregiver_Explanation_Required__c</fullName>
    <label>Explanation Required</label>
    <type>TextArea</type>
</CustomField>