force-app/main/default/objects/Permanency_Plan__c/fields/Caseworker_Date__c.field-meta.xml
<CustomField>
    <fullName>Caseworker_Date__c</fullName>
    <label>Caseworker Date</label>
    <type>Date</type>
</CustomField>