force-app/main/default/objects/Permanency_Plan__c/fields/Caseworker_Name__c.field-meta.xml
<CustomField>
    <fullName>Caseworker_Name__c</fullName>
    <inlineHelpText>Caseworker Name</inlineHelpText>
    <label>Caseworker Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>