force-app/main/default/objects/Permanency_Plan__c/fields/Caseworker_Requirement_and_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Caseworker_Requirement_and_Expectations__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Relative Caregiver(s) and the caseworker have discussed the requirement and expectations for participating in the Guardianship Assistance Program.</inlineHelpText>
    <label>Caseworker Requirement and Expectations</label>
    <type>Checkbox</type>
</CustomField>