force-app/main/default/objects/Permanency_Plan__c/fields/Caseworker_Signature__c.field-meta.xml
<CustomField>
    <fullName>Caseworker_Signature__c</fullName>
    <label>Caseworker Signature</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>