force-app/main/default/objects/Permanency_Plan__c/fields/Change_In_Placement_and_or_Circumstances__c.field-meta.xml
<CustomField>
    <fullName>Change_In_Placement_and_or_Circumstances__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Relative Caregiver(s) agree to notify the local department of any change in placement and/or circumstances.</inlineHelpText>
    <label>Change In Placement and/or Circumstances</label>
    <type>Checkbox</type>
</CustomField>