force-app/main/default/objects/Permanency_Plan__c/fields/Check_the_age_of_the_child__c.field-meta.xml
<CustomField>
    <fullName>Check_the_age_of_the_child__c</fullName>
    <inlineHelpText>Check the age of the child by the end of the federal fiscal year (October 1 to September 30) in which the adoption assistance agreement is entered into</inlineHelpText>
    <label>Check the age of the child</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>16-18 October 1,2009 - September 30,2010</fullName>
            </value>
            <value>
                <fullName>14-18 October 1,2010 - September 30,2011</fullName>
            </value>
            <value>
                <fullName>12-18 October 1,2011 - September 30,2012</fullName>
            </value>
            <value>
                <fullName>10-18 October 1,2012 - September 30,2013</fullName>
            </value>
            <value>
                <fullName>8-18 October 1,2013 - September 30,2014</fullName>
            </value>
            <value>
                <fullName>6-18 October 1,2014 - September 30,2015</fullName>
            </value>
            <value>
                <fullName>4-18 October 1,2015 - September 30,2016</fullName>
            </value>
            <value>
                <fullName>2-18 October 1,2016 - September 30,2017</fullName>
            </value>
            <value>
                <fullName>0-18 October 1,2017 - December 31,2017</fullName>
            </value>
            <value>
                <fullName>2-18 January 1,2018 - June 30,2024</fullName>
            </value>
            <value>
                <fullName>0-18 July 1,2024</fullName>
            </value>
            <value>
                <fullName>None of the ages apply</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>