force-app/main/default/objects/Permanency_Plan__c/fields/child_be_returned_to_the_home_of_parent__c.field-meta.xml
<CustomField>
    <fullName>child_be_returned_to_the_home_of_parent__c</fullName>
    <inlineHelpText>Can the child be returned to the home of the parent?</inlineHelpText>
    <label>child be returned to the home of parent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>