force-app/main/default/objects/Permanency_Plan__c/fields/Child_has_a_mental_or_physical__c.field-meta.xml
<CustomField>
    <fullName>Child_has_a_mental_or_physical__c</fullName>
    <inlineHelpText>Child has a mental or physical disability warranting continuation of assistance?</inlineHelpText>
    <label>Child has a mental or physical disabilit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>