force-app/main/default/objects/Permanency_Plan__c/fields/Child_is_Legally_free__c.field-meta.xml
<CustomField>
    <fullName>Child_is_Legally_free__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child is Legally free</label>
    <type>Checkbox</type>
</CustomField>