force-app/main/default/objects/Permanency_Plan__c/fields/Child_Placed_By__c.field-meta.xml
<CustomField>
    <fullName>Child_Placed_By__c</fullName>
    <inlineHelpText>Child Placed By</inlineHelpText>
    <label>Child Placed By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Birth Parent</fullName>
            </value>
            <value>
                <fullName>Independent Source</fullName>
            </value>
            <value>
                <fullName>Legal Guardian</fullName>
            </value>
            <value>
                <fullName>Private Agency</fullName>
            </value>
            <value>
                <fullName>Tribal Agency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>