force-app/main/default/objects/Permanency_Plan__c/fields/Child_Placed_From__c.field-meta.xml
<CustomField>
    <fullName>Child_Placed_From__c</fullName>
    <inlineHelpText>Child Placed From</inlineHelpText>
    <label>Child Placed From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Another Country</fullName>
            </value>
            <value>
                <fullName>Another LDSS</fullName>
            </value>
            <value>
                <fullName>Another State</fullName>
            </value>
            <value>
                <fullName>Within State</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>