force-app/main/default/objects/Permanency_Plan__c/fields/child_placed_undiagnosed_mental_physical__c.field-meta.xml
<CustomField>
    <fullName>child_placed_undiagnosed_mental_physical__c</fullName>
    <inlineHelpText>Explain to the family that the child being placed may have undiagnosed mental, physical,or emotional problem</inlineHelpText>
    <label>child placed undiagnosed mental,physical</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>