force-app/main/default/objects/Permanency_Plan__c/fields/Child_Removal_Date_VPA__c.field-meta.xml
<CustomField>
    <fullName>Child_Removal_Date_VPA__c</fullName>
    <label>Child Removal Date( VPA)</label>
    <type>Date</type>
</CustomField>